--- a/client/src/components/features/SignUp/style.css
+++ b/client/src/components/features/SignUp/style.css
@@ -1,5 +1,5 @@
-* > * {
-  font-family: 'Roboto', sans-serif;
+* {
+  font-family: 'Poppins', sans-serif;
   margin: 0;
 }
 
@@ -66,6 +66,10 @@ background: linear-gradient(to right, #F8CDDA, #1D2B64);  */
   border-radius: 0.3rem;
 }
 
+#signupForm > .btn:hover {
+  background-color: #7a2fdc;
+}
+
 .flex {
   display: flex;
   gap: 1em;
@@ -86,10 +90,17 @@ background: linear-gradient(to right, #F8CDDA, #1D2B64);  */
 }
 .col-1 .signupHeading {
   position: absolute;
-  left: 0;
-  margin-top: -15%;
+  top: 1.3%;
   font-size: 1.5rem;
   font-weight: bold;
+}
+.col-1 .signupsubHeading {
+  /* position: absolute; */
+  /* left: 0; */
+  color: #adb5bd;
+  top: 1.3%;
+  /* font-size: 1.5rem; */
+  font-weight: 500;
 }
 .eye-icon-1 {
   color: rgba(185, 182, 182, 0.928);
