--- a/client/src/components/features/auth/ForgetPassword/style.css
+++ b/client/src/components/features/auth/ForgetPassword/style.css
@@ -1,13 +1,12 @@
 .flex {
   display: flex;
   flex-direction: row;
-  width: 80vw;
-
+  width: 100vw;
   flex-wrap: wrap;
   justify-content: center;
   margin: 20px 0px;
-  border: 1px solid #bebcbd;
-  min-height: 100vh;
+  
+  min-height: 70vh;
 }
 .side1 {
   /* border: 1px solid red; */
@@ -17,7 +16,6 @@
   align-items: center;
   justify-content: center;
   min-width: 300px;
-  /* border: 1px solid red; */
 }
 .side2 {
   /* border: 1px solid rgb(0, 0, 0); */
@@ -80,7 +78,6 @@ form label {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 0.36px;
-  margin-bottom: 5px;
 }
 form input {
   width: 100%;
@@ -88,7 +85,27 @@ form input {
   text-indent: 20px;
   border-radius: 8px;
   border: 1px solid rgba(102, 102, 102, 0.8);
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+}
+.hideBtn {
+  width: 20px;
+  height: 20px;
+
+  /* justify-self: flex-start; */
+  margin-top: -45px;
+  /* margin-left: -40px; */
+  background: none;
+  border: none;
+  margin-left: -30px;
+}
+.paraRed {
+  color: #f00;
+  font-family: poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px; /* 131.25% */
+  margin-left: 0px;
 }
 
 .button {
@@ -105,6 +122,12 @@ form input {
 .button:hover {
   color: white;
   background-color: #7613f7;
+}
+
+.loginback {
+  color: #3c4242;
+  text-decoration: none;
+  margin: 5px 0px;
 }
 
 @media only screen and (max-width: 600px) {
