--- a/client/src/components/features/auth/Verification/style.css
+++ b/client/src/components/features/auth/Verification/style.css
@@ -1,13 +1,13 @@
 .flex {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  width: 80vw;
+
   flex-wrap: wrap;
   justify-content: center;
   margin: 20px 0px;
-  border: 1px solid #bebcbd;
-  min-height: 80vh;
-  /* max-height: 100vh; */
+
+  min-height: 100vh;
 }
 .side1 {
   /* border: 1px solid red; */
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: center;
   min-width: 300px;
+  /* border: 1px solid red; */
 }
 .side2 {
   /* border: 1px solid rgb(0, 0, 0); */
@@ -31,7 +32,7 @@
 }
 .image {
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 .heading {
   color: #333;
@@ -66,7 +67,7 @@
   display: flex;
   flex-direction: column;
   /* align-items: center;
-  justify-content: flex-start; */
+    justify-content: flex-start; */
   /* border: 1px solid grey; */
   margin-top: 50px;
   width: 38vw;
@@ -79,6 +80,7 @@ form label {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 0.36px;
+  margin-bottom: 5px;
 }
 form input {
   width: 100%;
@@ -86,46 +88,9 @@ form input {
   text-indent: 20px;
   border-radius: 8px;
   border: 1px solid rgba(102, 102, 102, 0.8);
-  margin-bottom: 40px;
-}
-.newPass {
-  display: flex;
   margin-bottom: 20px;
-  align-items: center;
-  justify-content: center;
-  /* border: 1px solid black; */
 }
-.hide {
-  width: 20px;
-  height: 20px;
-  align-self: flex-end;
-  /* border: 1px solid red; */
-  /* justify-self: flex-start; */
-  /* margin-top: -80px; */
-}
-.hideBtn {
-  width: 20px;
-  height: 20px;
 
-  /* justify-self: flex-start; */
-  margin-top: -45px;
-  /* margin-left: -40px; */
-  background: none;
-  border: none;
-  margin-left: -30px;
-}
-.paraRed {
-  color: #f00;
-  font-family: poppins;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21px; /* 131.25% */
-  margin-left: 0px;
-}
-#confirmPassword {
-  margin-bottom: 2px;
-}
 .button {
   color: white;
   background-color: #8a33fd;
@@ -142,9 +107,6 @@ form input {
   background-color: #7613f7;
 }
 
-.hidden {
-  display: none;
-}
 @media only screen and (max-width: 600px) {
   .form {
     display: flex;
