--- a/client/src/components/features/Home/style.css
+++ b/client/src/components/features/Home/style.css
@@ -73,7 +73,7 @@ h6,
 h5,
 p {
   margin-left: 30px;
-  line-height: 1px;
+  /* line-height: 1px; */
 }
 .arrival {
   display: flex;
@@ -82,6 +82,7 @@ p {
   justify-content: center;
   width: 100vw;
   flex-wrap: wrap;
+  padding: 30px 0px;
 }
 .itemArrival {
   width: 25%;
