--- a/client/src/components/features/auth/Login/style.css
+++ b/client/src/components/features/auth/Login/style.css
@@ -52,12 +52,12 @@
   background-color: #7a2fdc;
 }
 
-.flex {
+.flexx {
   display: flex;
   gap: 1em;
 }
 
-.flex2 {
+.flexx2 {
   display: flex;
   gap: 0.2rem;
 }
