--- a/client/src/components/features/auth/ForgetPassword/style.css
+++ b/client/src/components/features/auth/ForgetPassword/style.css
@@ -85,7 +85,7 @@ form input {
   text-indent: 20px;
   border-radius: 8px;
   border: 1px solid rgba(102, 102, 102, 0.8);
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 }
 .hideBtn {
   width: 20px;
