--- a/client/src/components/features/auth/NewPassword/style.css
+++ b/client/src/components/features/auth/NewPassword/style.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 20px 0px;
-  
+
   min-height: 80vh;
   /* max-height: 100vh; */
 }
@@ -86,7 +86,7 @@ form input {
   text-indent: 20px;
   border-radius: 8px;
   border: 1px solid rgba(102, 102, 102, 0.8);
-  margin-bottom: 40px;
+  /*margin-bottom: 40px;*/
 }
 .newPass {
   display: flex;
