--- a/client/src/components/features/auth/Verification/style.css
+++ b/client/src/components/features/auth/Verification/style.css
@@ -88,7 +88,7 @@ form input {
   text-indent: 20px;
   border-radius: 8px;
   border: 1px solid rgba(102, 102, 102, 0.8);
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
 }
 
 .button {
