--- a/client/src/components/features/auth/Login/style.css
+++ b/client/src/components/features/auth/Login/style.css
@@ -4,18 +4,19 @@
 }
 
 .sigin-registeration-form {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   /* width: 800vw;  */
   height: 100%;
-  margin: 2rem auto;
+  /* margin: 2rem auto; */
   display: flex;
   /* border: 1px solid #e9ecef; */
   border-radius: 5px;
   /* box-shadow: 1px 3px 8px #e9ecef; */
   background-color: white;
   /* display: flex; */
-  /* justify-content: center;
-  align-items: center; */
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
 }
 
 .sigin-registeration-form span {
@@ -41,7 +42,7 @@
 #signinForm > .btn {
   background: #8a33fd;
   /* background: -webkit-linear-gradient(to right, #f8cdda, #1d2b64);
-  background: linear-gradient(to right, #f8cdda, #1d2b64); */
+    background: linear-gradient(to right, #f8cdda, #1d2b64); */
   color: white;
   font-size: 1rem;
   font-weight: 600;
@@ -67,7 +68,11 @@
 }
 
 .sigin-registeration-form .column-1 {
-  margin: auto;
+  /* margin: auto; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 3em 0;
   position: relative;
 }
@@ -98,7 +103,7 @@
 }
 .sigin-registeration-form .col-2 img {
   height: 600px;
-  width: 500px;  
+  width: 500px;
   object-fit: cover;
   display: none;
 }
