--- a/client/src/components/features/auth/SignUp/style.css
+++ b/client/src/components/features/auth/SignUp/style.css
@@ -3,70 +3,53 @@
   margin: 0;
 }
 
-body {
-  overflow-x: none;
-  /* background: #85bdc6; /* fallback for old browsers */
-  /* background: -webkit-linear-gradient( */
-  /* to right, */
-  /* #ffd194, */
-  /* #8dc5ce */
-  /* ); Chrome 10-25, Safari 5.1-6 */
-  /* background: linear-gradient(
-    to right,
-    #ffd194,
-    #85bdc6 */
-  /* ); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-.signup-registeration-form {
-  max-width: 1000px;
+.sigin-registeration-form {
+  /* max-width: 1000px; */
   /* width: 800vw;  */
   height: 100%;
-  margin: 2rem auto;
+  /* margin: 2rem auto; */
   display: flex;
   /* border: 1px solid #e9ecef; */
   border-radius: 5px;
   /* box-shadow: 1px 3px 8px #e9ecef; */
   background-color: white;
   /* display: flex; */
-  /* justify-content: center;
-  align-items: center; */
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
 }
 
-.signup-registeration-form span {
+.sigin-registeration-form span {
   color: #adb5bd;
-  position: absolute;
-  top: 10%;
 }
 
-#signupForm {
+#signinForm {
   max-width: 320px;
   width: 100vw;
-  margin: 2em auto;
+  margin: 1.5em auto;
 }
 
-#signupForm > input,
+#signinForm > input,
 .btn {
   border: 1px solid #e9ecef;
   padding: 0.9em 1em;
 }
 
-#signupForm > input:focus {
+#signinForm > input:focus {
   outline: none;
 }
 
-#signupForm > .btn {
-  background-color: #8a33fd;
-  /* background: -webkit-linear-gradient(to right, #F8CDDA, #1D2B64); 
-background: linear-gradient(to right, #F8CDDA, #1D2B64);  */
+#signinForm > .btn {
+  background: #8a33fd;
+  /* background: -webkit-linear-gradient(to right, #f8cdda, #1d2b64);
+    background: linear-gradient(to right, #f8cdda, #1d2b64); */
   color: white;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
   border-radius: 0.3rem;
 }
-
-#signupForm > .btn:hover {
+#signinForm > .btn:hover {
   background-color: #7a2fdc;
 }
 
@@ -79,22 +62,27 @@ background: linear-gradient(to right, #F8CDDA, #1D2B64);  */
   display: flex;
   gap: 0.2rem;
 }
+
 .flex-col {
   flex-direction: column;
 }
 
-.signup-registeration-form .col-1 {
-  margin: auto;
+.sigin-registeration-form .column-1 {
+  /* margin: auto; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 3em 0;
   position: relative;
 }
-.col-1 .signupHeading {
+.column-1 .signinHeader {
   position: absolute;
   top: 1.3%;
   font-size: 1.5rem;
   font-weight: bold;
 }
-.col-1 .signupsubHeading {
+.column-1 .signinsubHeading {
   /* position: absolute; */
   /* left: 0; */
   color: #adb5bd;
@@ -102,30 +90,26 @@ background: linear-gradient(to right, #F8CDDA, #1D2B64);  */
   /* font-size: 1.5rem; */
   font-weight: 500;
 }
-.eye-icon-1 {
+.eye-icon2 {
   color: rgba(185, 182, 182, 0.928);
   position: absolute;
   right: 4%;
-  top: 57%;
+  top: 50%;
 }
-.link {
+.linkk {
   color: #000;
   font-size: 1rem;
   text-decoration: underline;
 }
-.signup-registeration-form .col-2 img {
-  width: 500px;
+.sigin-registeration-form .col-2 img {
   height: 600px;
+  width: 500px;
   object-fit: cover;
-  /* object-fit: cover;
-  align-self: flex-end;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px; */
   display: none;
 }
 
 @media screen and (min-width: 1100px) {
-  .signup-registeration-form .col-2 img {
+  .sigin-registeration-form .col-2 img {
     display: initial;
   }
 }
