--- a/client/src/components/features/auth/VendorSignUp/style.css
+++ b/client/src/components/features/auth/VendorSignUp/style.css
@@ -19,11 +19,13 @@ body {
 }
 
 .signup-registeration-form {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   /* width: 800vw;  */
   height: 100%;
-  margin: 2rem auto;
+  /* margin: 2rem auto; */
   display: flex;
+  align-items: center;
+  justify-content: center;
   /* border: 1px solid #e9ecef; */
   border-radius: 5px;
   /* box-shadow: 1px 3px 8px #e9ecef; */
@@ -31,6 +33,7 @@ body {
   /* display: flex; */
   /* justify-content: center;
     align-items: center; */
+    gap: 100px;
 }
 
 .signup-registeration-form span {
